# valor

./: .gitmodules  COPYING  Makefile.am  README.md  autogen  configure.ac  log.h  toy.cc  uctx.h  valet.cc  valet.h  valet_lib.cc  valor.cc  valor.h
balor/: Makefile.am  cmp_sw.cc
tests/: Makefile.am  c0.cc
vapor/: Makefile  Makefile.am  vapor.cc
