# ACLOCAL_AMFLAGS = -Im4
# SUBDIRS = tests #vapor

# bin_PROGRAMS = valet valor

# # AM_DEFAULT_SOURCE_EXT = .cc

# # CPPFLAGS := -Iufser
# # AM_CXXFLAGS += -std=c++20 -ggdb3 -O0 #-Wall #-Werror

# #test: valor
# #    valor s | valor r

# valor_SOURCES = valor.cc ufser/ufser.cpp

# valet_CPPFLAGS = $(AM_CPPFLAGS) $(LLVM_CPP)
# valet_CXXFLAGS = $(LLVM_CXX) $(AM_CXXFLAGS) # order of -std=... !
# valet_LDFLAGS = $(AM_LDFLAGS) $(LLVM_LD)
# valet_LDLIBS = $(foreach i,Tooling Frontend Driver Serialization Sema Analysis AST Parse Edit Lex Basic,-lclang$(i)) $(LLVM_LIBS) #-lgtest -lgtest_main

# # valet: valet.cc #TODO no need for the gtest flags
